--- a/doc/releasenotes/v0.4.0.rst
+++ b/doc/releasenotes/v0.4.0.rst
@@ -2,6 +2,8 @@
 Release notes for v0.4.0
 ========================
 
+.. note:: These release notes are currently in production.
+
 ..
   When documenting a bug fix or feature, please do so in the following format
 
