--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -32,7 +32,9 @@ Dependency Changes
 ..
   Describe any new/removed/modified package dependencies
 
+- ``SaltProc`` now optionally required the following package:
 
+  - (new) → `openmc`_
 
 
 New Features
@@ -41,7 +43,7 @@ New Features
 ..
   Describe any new features to the code.
 
-
+- ``openmc`` support via `DepcodeOpenMC`
 
 
 Bug Fixes
@@ -68,7 +70,20 @@ Python API Changes
 ..
   Describe any changes to the API
 
+- Input file format changes:
 
+  - ``depcode['template_inputfile_path']`` → ``depcode['template_inputfile_paths']``
+  - The ``depcode['template_inputfile_paths']`` input variable now has depletion-code-depentent type:
+    
+    - ``str`` for ``Serpent2``
+    - ``dict`` of ``str`` to ``str`` for ``openmc``
+
+  - ``depcode['iter_inputfile']`` → (removed)
+  - ``depcode['iter_matfile']`` → (removed)
+
+.. note:: While the ``iter_inputfile`` and ``iter_matfile`` variables have been removed from the saltproc input file,
+   their presence and usage in ``DepcodeSerpent`` class is unchanged, save for the fact that users can no longer specify
+   the names of these files without modifying the source code. The new default name for ``iter_inputfile`` is ``serpent_iter_inputfile.serpent``, and for ``iter_matfile`` is ``serpent_iter_matfile.ini`` , 
 
 
 Contributors
