--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -85,6 +85,17 @@ Python API Changes
    their presence and usage in ``DepcodeSerpent`` class is unchanged, save for the fact that users can no longer specify
    the names of these files without modifying the source code. The new default name for ``iter_inputfile`` is ``serpent_iter_inputfile.serpent``, and for ``iter_matfile`` is ``serpent_iter_matfile.ini`` , 
 
+- New/changed classes and methods:
+
+  - ``Depcode``
+
+    - Removed...
+
+  - ``DepcodeSerpent``
+
+    - Removed
+
+  - ``DepcodeOpenmc`` is a ``Depcode`` subclass that interfaces with ``openmc``. There 
 
 Contributors
 ============
