--- a/doc/releasenotes/v0.4.0.rst
+++ b/doc/releasenotes/v0.4.0.rst
@@ -28,7 +28,7 @@ Summary
 ..
   Describe generally the features of this release
 
-This version of SaltProc refactors the code in preparation for supporting OpenMC.
+This version of SaltProc refactors the code in preparation for supporting ``OpenMC``.
 
 
 Dependency Changes
