--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -59,6 +59,11 @@ Script Changes
   Describe any script additions/modifications/removals
 
 
+- Added convenience features to ``process_j312.bash``
+
+  - Control flow check for an ``XSDIR`` environment variable se tby the user. This variable should point to the location where the user would like the library to be installed
+  - Commands to donwload and run the ``xsdirconvert.pl`` script (found on the Serpent wiki) to convert the MCNP ``.dir`` style file to the Serpent ``.xsdata`` style file
+  - Add ``SERPENT_DATA`` and ``SERPENT_ACELIB`` variables to ``.bashrc``
 
 
 Python API Changes
