--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -31,8 +31,8 @@ Dependency Changes
 ..
   Describe any new/removed/modified package dependencies
 
-
-
+- ``pyne>=0.5.11`` → ``pyne>=0.5.11=nomoab_noopenmc*``
+  
 
 New Features
 ============
@@ -59,6 +59,7 @@ Script Changes
   Describe any script additions/modifications/removals
 
 
+- A new script, ``scripts/ci/openmc-xs.bash``, that downloads the OpenMC HDF5 cross section library.
 
 
 Python API Changes
