--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -62,7 +62,7 @@ Script Changes
 - Added convenience features to ``process_j312.bash``
 
   - Control flow check for an ``XSDIR`` environment variable set by the user. This variable should point to the location where the user would like the library to be installed
-  - Commands to donwload and run the ``xsdirconvert.pl`` script (found on the Serpent wiki) to convert the MCNP ``.dir`` style file to the Serpent ``.xsdata`` style file
+  - Commands to download and run the ``xsdirconvert.pl`` script (found on the Serpent wiki) to convert the MCNP ``.dir`` style file to the Serpent ``.xsdata`` style file
   - Add ``SERPENT_DATA`` and ``SERPENT_ACELIB`` variables to ``.bashrc``
 
 
