cleaned up generation codE

--- a/examples/msbr/model-plotting.ipynb
+++ b/examples/msbr/model-plotting.ipynb
@@ -114,29 +114,18 @@
     "# I-A 1 (lower 1)\n",
     "ia_gr_round_1 = openmc.ZCylinder(r=4.953)\n",
     "ia_fuel_hole = openmc.ZCylinder(r=1.71069)\n",
-    "\n",
     "ia_fuel_inner_1 = openmc.Cell(fill=fuel, region=(-ia_fuel_hole))\n",
     "ia_moderator_1 = openmc.Cell(fill=moder, region=(+ia_fuel_hole &\n",
     "                                                 -ia_gr_round_1))\n",
     "ia_fuel_outer_1 = openmc.Cell(fill=fuel, region=(+ia_gr_round_1 &\n",
     "                                                 pin_bound))\n",
-    "\n",
     "ia1 = (ia_fuel_inner_1, ia_moderator_1, ia_fuel_outer_1)\n",
     "\n",
-    "# I-A and II-A main (lower 2 and lower 1)\n",
-    "iia_fuel_hole_main = openmc.ZCylinder(r=3.302) # Hole with fuel salt - Fig 3.5, Roberton 1971 (3.27787 - p.47)\n",
-    "\n",
+    "# I-A  main (lower 2)\n",
     "ia_fuel_inner_main = ia_fuel_inner_1.clone(clone_materials=False)\n",
-    "iia_fuel_inner_main = openmc.Cell(fill=fuel, region=(-iia_fuel_hole_main))\n",
-    "\n",
     "ia_moderator_main = openmc.Cell(fill=moder, region=(+ia_fuel_hole &\n",
     "                                      pin_gr_sq_neg |\n",
     "                                      pin_corners))\n",
-    "\n",
-    "iia_moderator_main = openmc.Cell(fill=moder, region=(+iia_fuel_hole_main &\n",
-    "                                      pin_gr_sq_neg |\n",
-    "                                      pin_corners))\n",
-    "\n",
     "ia_fuel_outer_main = openmc.Cell(fill=fuel, region=(pin_gr_sq_pos &\n",
     "                                     pin_bound &\n",
     "                                     +lu &\n",
@@ -147,78 +136,71 @@
     "                                     +rb_adj &\n",
     "                                     +ru_adj &\n",
     "                                     +lb_adj))\n",
-    "\n",
-    "iia_fuel_outer_main = ia_fuel_outer_main.clone(clone_materials=False)\n",
-    "\n",
     "iam = (ia_fuel_inner_main, ia_moderator_main, ia_fuel_outer_main)\n",
-    "iiam = (iia_fuel_inner_main, iia_moderator_main, iia_fuel_outer_main)\n",
     "\n",
-    "\n",
-    "# I-A and II-A 2 (upper 1)\n",
-    "iia_fuel_hole_2 = openmc.ZCylinder(r=0.635)\n",
-    "\n",
+    "# I-A 2 (upper 1)\n",
     "ia_fuel_inner_2 = ia_fuel_inner_1.clone(clone_materials=False)\n",
-    "iia_fuel_inner_2 = openmc.Cell(fill=fuel, region=(-iia_fuel_hole_2))\n",
-    "\n",
     "ia_moderator_2 = ia_moderator_1.clone(clone_materials=False)\n",
-    "iia_moderator_2 = openmc.Cell(fill=moder, region=(+iia_fuel_hole_2 &\n",
-    "                                      pin_gr_sq_neg |\n",
-    "                                      pin_corners))\n",
-    "\n",
     "ia_fuel_outer_2 = ia_fuel_outer_1.clone(clone_materials=False)\n",
-    "iia_fuel_outer_2 = ia_fuel_outer_main.clone(clone_materials=False)\n",
-    "\n",
     "ia2 = (ia_fuel_inner_2, ia_moderator_2, ia_fuel_outer_2)\n",
-    "iia2 = (iia_fuel_inner_2, iia_moderator_2, iia_fuel_outer_2)\n",
     "                              \n",
-    "\n",
-    "# I-A and II-A 3 (upper 2)\n",
+    "# I-A 3 (upper 2)\n",
     "h = 12.66\n",
     "theta = np.arctan(4.953 / h)\n",
     "r2 = (1 / np.cos(theta))**2 - 1\n",
     "cone_i = openmc.ZCone(z0=h, r2=r2)\n",
-    "\n",
-    "iia_gr_round_3 = openmc.ZCylinder(r=3.65125)\n",
-    "\n",
-    "\n",
     "ia_fuel_inner_3 = ia_fuel_inner_1.clone(clone_materials=False)\n",
-    "iia_fuel_inner_3 = iia_fuel_inner_2.clone(clone_materials=False)\n",
-    "\n",
     "ia_moderator_3 = openmc.Cell(fill=moder, region=(+ia_fuel_hole &\n",
     "                                                 -cone_i))\n",
-    "iia_moderator_3 = openmc.Cell(fill=moder, region=(+iia_fuel_hole_2 &\n",
-    "                                                  -iia_gr_round_3))\n",
-    "\n",
     "ia_fuel_outer_3 = openmc.Cell(fill=fuel, region=(+cone_i & \n",
     "                                                 pin_bound))\n",
-    "iia_fuel_outer_3 = openmc.Cell(fill=fuel, region=(+iia_gr_round_3 &\n",
-    "                                                  pin_bound))\n",
-    "\n",
-    "ia3 = (ia_fuel_inner_3, ia_moderator_3, ia_fuel_outer_3)\n",
-    "iia3 = (iia_fuel_inner_3, iia_moderator_3, iia_fuel_outer_3)\n",
-    "\n",
-    "\n",
-    "                             \n",
+    "ia3 = (ia_fuel_inner_3, ia_moderator_3, ia_fuel_outer_3)                             \n",
     "\n",
     "# I-A and II-A 4 (upper 3)\n",
     "ia_gr_round_4 = openmc.ZCylinder(r=2.2225)\n",
+    "ia_hast = openmc.Cell(fill=hast, region=(-ia_fuel_hole))\n",
+    "ia_moderator_4 = openmc.Cell(fill=moder, region=(+ia_fuel_hole &\n",
+    "                                                 -ia_gr_round_4))\n",
+    "ia_fuel_outer_4 = openmc.Cell(fill=fuel, region=(+ia_gr_round_4 &\n",
+    "                                                 pin_bound))\n",
+    "ia4 = (ia_hast, ia_moderator_4, ia_fuel_outer_4)\n",
     "\n",
+    "\n",
+    "# II-A main (lower 1)\n",
+    "iia_fuel_hole_main = openmc.ZCylinder(r=3.302) # Hole with fuel salt - Fig 3.5, Roberton 1971 (3.27787 - p.47)\n",
+    "iia_fuel_inner_main = openmc.Cell(fill=fuel, region=(-iia_fuel_hole_main))\n",
+    "iia_moderator_main = openmc.Cell(fill=moder, region=(+iia_fuel_hole_main &\n",
+    "                                      pin_gr_sq_neg |\n",
+    "                                      pin_corners))\n",
+    "iia_fuel_outer_main = ia_fuel_outer_main.clone(clone_materials=False)\n",
+    "iiam = (iia_fuel_inner_main, iia_moderator_main, iia_fuel_outer_main)\n",
+    "\n",
+    "# II-A 2 (upper 1)\n",
+    "iia_fuel_hole_2 = openmc.ZCylinder(r=0.635)\n",
+    "iia_fuel_inner_2 = openmc.Cell(fill=fuel, region=(-iia_fuel_hole_2))\n",
+    "iia_moderator_2 = openmc.Cell(fill=moder, region=(+iia_fuel_hole_2 &\n",
+    "                                      pin_gr_sq_neg |\n",
+    "                                      pin_corners))\n",
+    "iia_fuel_outer_2 = ia_fuel_outer_main.clone(clone_materials=False)\n",
+    "iia2 = (iia_fuel_inner_2, iia_moderator_2, iia_fuel_outer_2)\n",
+    "\n",
+    "# II-A 3 (upper 2)\n",
+    "iia_gr_round_3 = openmc.ZCylinder(r=3.65125)\n",
+    "iia_fuel_inner_3 = iia_fuel_inner_2.clone(clone_materials=False)\n",
+    "iia_moderator_3 = openmc.Cell(fill=moder, region=(+iia_fuel_hole_2 &\n",
+    "                                                  -iia_gr_round_3))\n",
+    "iia_fuel_outer_3 = openmc.Cell(fill=fuel, region=(+iia_gr_round_3 &\n",
+    "                                                  pin_bound))\n",
+    "iia3 = (iia_fuel_inner_3, iia_moderator_3, iia_fuel_outer_3)\n",
+    "\n",
+    "# II-A 4 (upper 3)\n",
     "h = 6.5\n",
     "theta = np.arctan(3.65125 / h)\n",
     "r2 = (1 / np.cos(theta))**2 - 1\n",
     "cone_ii = openmc.ZCone(z0=h, r2=r2)\n",
-    "\n",
-    "ia_hast = openmc.Cell(fill=hast, region=(-ia_fuel_hole))\n",
-    "ia_moderator_4 = openmc.Cell(fill=moder, region=(+ia_fuel_hole &\n",
-    "                                                 -ia_gr_round_4))\n",
     "iia_moderator_4 = openmc.Cell(fill=moder, region=(-cone_ii))\n",
-    "\n",
-    "ia_fuel_outer_4 = openmc.Cell(fill=fuel, region=(+ia_gr_round_4 &\n",
-    "                                                 pin_bound))\n",
     "iia_fuel_outer_4 = openmc.Cell(fill=fuel, region=(+cone_ii &\n",
     "                                                  pin_bound))\n",
-    "\n",
-    "ia4 = (ia_hast, ia_moderator_4, ia_fuel_outer_4)\n",
     "iia4 = (iia_moderator_4, iia_fuel_outer_4)\n",
     "\n",
     "# II-A 5 (upper 4)\n",
@@ -305,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "99f1d96d",
    "metadata": {},
    "outputs": [],
@@ -517,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ec266af0",
    "metadata": {},
    "outputs": [],
@@ -664,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "acb7a1ac",
    "metadata": {},
    "outputs": [],
