--- a/examples/msbr/model-plotting.ipynb
+++ b/examples/msbr/model-plotting.ipynb
@@ -60,6 +60,8 @@
    "outputs": [],
    "source": [
     "def _bound_zone_cells(cells_tuples, levels):\n",
+    "    \"\"\"Helper function that moves Zone IA and Zone IIA cells to the\n",
+    "    appropriate height.\"\"\"\n",
     "    cell_list = []\n",
     "    for i, cells in enumerate(cells_tuples):\n",
     "        lower_bound = levels[i]\n",
@@ -165,7 +167,8 @@
     "    ia4 = (c13, c14, c15)\n",
     "    \n",
     "    elem_cells = [ia1, iam, ia2, ia3, ia4]\n",
-    "    ia = openmc.Universe(universe_id=1, name='zone_ia')\n",
+    "    # universe_id=1\n",
+    "    ia = openmc.Universe(name='zone_ia')\n",
     "    ia.add_cells(_bound_zone_cells(elem_cells, level_bounds))\n",
     "                 \n",
     "    return ia\n",
@@ -216,14 +219,15 @@
     "    iia5 = (c12, c13)\n",
     "    \n",
     "    elem_cells = [iiam, iia2, iia3, iia4, iia5]\n",
-    "    \n",
-    "    iia = openmc.Universe(universe_id=2, name='zone_iia')\n",
+    "    # universe_id=2\n",
+    "    iia = openmc.Universe(name='zone_iia')\n",
     "    iia.add_cells(_bound_zone_cells(elem_cells, level_bounds))\n",
     "    return iia\n",
     "\n",
     "def void_cell(elem_bound):\n",
     "    c1 = openmc.Cell(region=elem_bound, name='lattice_void')\n",
-    "    v = openmc.Universe(universe_id=5, name='lattice_void')\n",
+    "    #universe_id=5\n",
+    "    v = openmc.Universe(name='lattice_void')\n",
     "    v.add_cell(c1)\n",
     "    return v\n",
     "\n",
@@ -242,7 +246,8 @@
     "        c1 = openmc.Cell(fill=moder, region=(-s & elem_bound))\n",
     "        c2 = openmc.Cell(fill=fuel, region=(+s & elem_bound))\n",
     "    \n",
-    "        gr_tri = openmc.Universe(universe_id=6+i, name=f'{name}_triangle')\n",
+    "        # universe_id = 6+i\n",
+    "        gr_tri = openmc.Universe(name=f'{name}_triangle')\n",
     "        gr_tri.add_cells([c1, c2])\n",
     "        univs.append(gr_tri)\n",
     "    \n",
@@ -308,7 +313,8 @@
     "    \n",
     "    moderator_block = openmc.Cell(fill=moder, region=(+fuel_hole & gr_sq_neg | gr_corners), name='cr_moderator')\n",
     "    fuel_outer = openmc.Cell(fill=fuel, region=inter_elem_channel, name='cr_fuel_outer')\n",
-    "    cr = openmc.Universe(universe_id=3, name='control_rod')\n",
+    "    #universe_id=3\n",
+    "    cr = openmc.Universe(name='control_rod')\n",
     "    cr.add_cells([c1, c2, moderator_block, fuel_outer])\n",
     "    \n",
     "    return cr\n",
@@ -317,8 +323,8 @@
     "    c1 = openmc.Cell(fill=fuel, region=(-fuel_hole), name='crc_fuel_inner')\n",
     "    moderator_block = openmc.Cell(fill=moder, region=(+fuel_hole & gr_sq_neg | gr_corners), name='crc_moderator')\n",
     "    fuel_outer = openmc.Cell(fill=fuel, region=inter_elem_channel, name='crc_fuel_outer')\n",
-    "    \n",
-    "    crc = openmc.Universe(universe_id=4, name='control_rod_channel')\n",
+    "    # universe_id=4\n",
+    "    crc = openmc.Universe(name='control_rod_channel')\n",
     "    crc.add_cells([c1, moderator_block, fuel_outer])\n",
     "    \n",
     "    return crc"
@@ -326,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "7f985e3a",
    "metadata": {},
    "outputs": [],
@@ -358,9 +364,9 @@
     "                        bottom_reflector_boundary,\n",
     "                        top_reflector_boundary)\n",
     "    \n",
-    "    radial_vessel_boundary = openmc.ZCylinder(r=343.408, name='radial_vessel_wall')\n",
-    "    bottom_vessel_boundary = openmc.ZPlane(z0=-81.28, name='bottom_vessel_wall')\n",
-    "    top_vessel_boundary = openmc.ZPlane(z0=530.86, name='top_vessel_wall')\n",
+    "    radial_vessel_boundary = openmc.ZCylinder(r=343.408, name='radial_vessel_wall', boundary_type='vacuum')\n",
+    "    bottom_vessel_boundary = openmc.ZPlane(z0=-81.28, name='bottom_vessel_wall', boundary_type='vacuum')\n",
+    "    top_vessel_boundary = openmc.ZPlane(z0=530.86, name='top_vessel_wall', boundary_type='vacuum')\n",
     "    \n",
     "    vessel_bounds = (radial_vessel_boundary,\n",
     "                     bottom_vessel_boundary,\n",
@@ -512,7 +518,8 @@
     "                                        +core_base & \n",
     "                                        -core_top))\n",
     "    \n",
-    "    iib = openmc.Universe(universe_id=10, name='zone_iib')\n",
+    "    #universe_id=10\n",
+    "    iib = openmc.Universe(name='zone_iib')\n",
     "    iib.add_cell(c2)\n",
     "    # uncomment/comment\n",
     "    #iib.add_cell(c1)\n",
@@ -590,38 +597,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "e3607ef6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ooblack/projects/openmc/openmc/mixin.py:70: IDWarning: Another UniverseBase instance already exists with id=1.\n",
-      "  warn(msg, IDWarning)\n",
-      "/home/ooblack/projects/openmc/openmc/mixin.py:70: IDWarning: Another UniverseBase instance already exists with id=2.\n",
-      "  warn(msg, IDWarning)\n",
-      "/home/ooblack/projects/openmc/openmc/mixin.py:70: IDWarning: Another UniverseBase instance already exists with id=5.\n",
-      "  warn(msg, IDWarning)\n",
-      "/home/ooblack/projects/openmc/openmc/mixin.py:70: IDWarning: Another UniverseBase instance already exists with id=6.\n",
-      "  warn(msg, IDWarning)\n",
-      "/home/ooblack/projects/openmc/openmc/mixin.py:70: IDWarning: Another UniverseBase instance already exists with id=7.\n",
-      "  warn(msg, IDWarning)\n",
-      "/home/ooblack/projects/openmc/openmc/mixin.py:70: IDWarning: Another UniverseBase instance already exists with id=8.\n",
-      "  warn(msg, IDWarning)\n",
-      "/home/ooblack/projects/openmc/openmc/mixin.py:70: IDWarning: Another UniverseBase instance already exists with id=9.\n",
-      "  warn(msg, IDWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "main = main_lattice(zone_i_boundary, cr_boundary, core_base, core_top)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
+   "id": "b9f7e504",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RectLattice\n",
+       "\tID             =\t8\n",
+       "\tName           =\t\n",
+       "\tShape          =\t(45, 45)\n",
+       "\tLower Left     =\t[-228.6 -228.6]\n",
+       "\tPitch          =\t[10.16 10.16]\n",
+       "\tOuter          =\tNone\n",
+       "\tUniverses      \n",
+       "3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 6 2 2 2 2 2 2 2 2 2 5 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 3 3 3 3 3 3 3 6 2 2 2 2 1 1 1 1 1 1 1 1 1 2 2 2 2 5 3 3 3 3 3 3 3 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 3 3 3 3 3 6 2 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 5 3 3 3 3 3 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 3 3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 3 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 3 3 \n",
+       "3 3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 3 \n",
+       "3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 \n",
+       "3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 \n",
+       "3 3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 3 \n",
+       "3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 \n",
+       "3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 \n",
+       "3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 \n",
+       "3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 \n",
+       "6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 \n",
+       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
+       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
+       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
+       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 3 3 3 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
+       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 3 3 3 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
+       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 3 3 3 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
+       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
+       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
+       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
+       "4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 \n",
+       "3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 \n",
+       "3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 \n",
+       "3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 \n",
+       "3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 \n",
+       "3 3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 3 \n",
+       "3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 \n",
+       "3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 \n",
+       "3 3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 3 \n",
+       "3 3 3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 3 3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 3 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 3 3 3 3 3 4 2 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 7 3 3 3 3 3 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 3 3 3 3 3 3 3 4 2 2 2 2 1 1 1 1 1 1 1 1 1 2 2 2 2 7 3 3 3 3 3 3 3 3 3 3 3 3 3 \n",
+       "3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 4 2 2 2 2 2 2 2 2 2 7 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main.fill"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "cdf61881",
    "metadata": {},
    "outputs": [],
@@ -631,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "946aea12",
    "metadata": {},
    "outputs": [],
@@ -641,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "d57320b6",
    "metadata": {},
    "outputs": [],
@@ -651,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "9129f4da",
    "metadata": {},
    "outputs": [],
@@ -661,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "0e36e347",
    "metadata": {},
    "outputs": [],
@@ -683,17 +742,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "2a283441",
+   "execution_count": 21,
+   "id": "590a4368",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "geo = openmc.Geometry()\n",
+    "geo.root_universe = testuniverse\n",
+    "geo.remove_redundant_surfaces()\n",
+    "geo.export_to_xml()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2a283441",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f49141e2290>"
+       "<matplotlib.image.AxesImage at 0x7f51b9921690>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -717,6 +791,16 @@
     "        origin=(0.,0.,200),\n",
     "        color_by='material',\n",
     "        pixels=(1000,1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b40edd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "openmc.model."
    ]
   },
   {
