--- a/examples/msbr/model-plotting.ipynb
+++ b/examples/msbr/model-plotting.ipynb
@@ -484,10 +484,10 @@
     "        elem_hole = hole_region.rotate((0.0, 0.0, pos))\n",
     "        elem_reg = -large_elem & elem_hole\n",
     "        # comment/uncomment\n",
-    "        elem_cells.append(openmc.Cell(fill=moder, region=(elem_reg & \n",
-    "                                                          ~zone_i_boundary &\n",
-    "                                                          +core_base & \n",
-    "                                                          -core_top), name=f'iib_large_element_{pos}'))\n",
+    "        #elem_cells.append(openmc.Cell(fill=moder, region=(elem_reg & \n",
+    "        #                                                  ~zone_i_boundary &\n",
+    "        #                                                  +core_base & \n",
+    "        #                                                  -core_top), name=f'iib_large_element_{pos}'))\n",
     "        if isinstance(zone_iib_reg, openmc.Region):\n",
     "            zone_iib_reg = zone_iib_reg | elem_reg\n",
     "        else:\n",
@@ -500,10 +500,10 @@
     "            elem_reg = -openmc.model.CylinderSector(r1, r2, t1, t2)\n",
     "            pos = t2 - (small_angular_width / 2)\n",
     "            # comment/uncomment\n",
-    "            elem_cells.append(openmc.Cell(fill=moder, region=(elem_reg & \n",
-    "                                                              ~zone_i_boundary &\n",
-    "                                                              +core_base & \n",
-    "                                                              -core_top), name=f'iib_small_element_{pos}'))\n",
+    "            #elem_cells.append(openmc.Cell(fill=moder, region=(elem_reg & \n",
+    "            #                                                  ~zone_i_boundary &\n",
+    "            #                                                  +core_base & \n",
+    "            #                                                  -core_top), name=f'iib_small_element_{pos}'))\n",
     "            zone_iib_reg = zone_iib_reg | elem_reg\n",
     "            t1 = t2 + adjacent_angular_offset\n",
     "        \n",
@@ -607,79 +607,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b9f7e504",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RectLattice\n",
-       "\tID             =\t8\n",
-       "\tName           =\t\n",
-       "\tShape          =\t(45, 45)\n",
-       "\tLower Left     =\t[-228.6 -228.6]\n",
-       "\tPitch          =\t[10.16 10.16]\n",
-       "\tOuter          =\tNone\n",
-       "\tUniverses      \n",
-       "3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 6 2 2 2 2 2 2 2 2 2 5 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 3 3 3 3 3 3 3 6 2 2 2 2 1 1 1 1 1 1 1 1 1 2 2 2 2 5 3 3 3 3 3 3 3 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 3 3 3 3 3 6 2 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 5 3 3 3 3 3 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 3 3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 3 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 3 3 \n",
-       "3 3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 3 \n",
-       "3 3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 3 \n",
-       "3 3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 3 \n",
-       "3 3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 3 \n",
-       "3 6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 3 \n",
-       "3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 \n",
-       "3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 \n",
-       "3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 \n",
-       "6 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 5 \n",
-       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
-       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
-       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
-       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 3 3 3 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
-       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 3 3 3 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
-       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 3 3 3 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
-       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
-       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
-       "2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 \n",
-       "4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 \n",
-       "3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 \n",
-       "3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 \n",
-       "3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 \n",
-       "3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 \n",
-       "3 3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 3 3 \n",
-       "3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 \n",
-       "3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 \n",
-       "3 3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 3 \n",
-       "3 3 3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 3 3 3 3 4 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 7 3 3 3 3 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 3 3 3 3 3 4 2 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 7 3 3 3 3 3 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 3 3 3 3 3 3 3 4 2 2 2 2 1 1 1 1 1 1 1 1 1 2 2 2 2 7 3 3 3 3 3 3 3 3 3 3 3 3 3 \n",
-       "3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 4 2 2 2 2 2 2 2 2 2 7 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "main.fill"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "id": "cdf61881",
    "metadata": {},
@@ -742,8 +669,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "590a4368",
+   "execution_count": 20,
+   "id": "a29dd4ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "2a283441",
    "metadata": {
     "scrolled": false
@@ -764,10 +691,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f51b9921690>"
+       "<matplotlib.image.AxesImage at 0x7efe80dbc670>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -796,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b40edd1",
+   "id": "2ef134fa",
    "metadata": {},
    "outputs": [],
    "source": [
