--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -118,6 +118,7 @@ Python API Changes
     - ``sim_info`` → ``step_metadata``
     - ``read_depcode_step_param()`` → ``read_neutronics_parameters()``
     - ``param`` → ``neutronics_parameters``
+    - ``read_dep_comp()`` → ``read_depleted_materials()``
 
   - ``DepcodeSerpent`` → ``SerpentDepcode``
 
@@ -127,10 +128,9 @@ Python API Changes
     - ``sim_info`` → ``step_metadata``
     - ``read_depcode_step_param()`` → ``read_neutronics_parameters()``
     - ``param`` → ``neutronics_parameters``
-
+    - ``read_dep_comp()`` → ``read_depleted_materials()``
 
   - ``OpenMCDepcode`` is a ``Depcode`` subclass that interfaces with ``openmc``. This class implements the following functions 
-    - ``read_depletion_step_metadata()``
     - ``run_depcode()``
     - ``switch_to_next_geometry()``
     - ``write_depcode_input()``
