--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -129,6 +129,7 @@ Python API Changes
     - ``read_depcode_step_param()`` → ``read_neutronics_parameters()``
     - ``param`` → ``neutronics_parameters``
     - ``read_dep_comp()`` → ``read_depleted_materials()``
+    - ``create_nuclide_name_map_zam_to_serpent()`` → ``map_nuclide_code_zam_to_serpent()``
 
   - ``OpenMCDepcode`` is a ``Depcode`` subclass that interfaces with ``openmc``. This class implements the following functions 
     - ``run_depcode()``
