--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -119,6 +119,7 @@ Python API Changes
     - ``read_depcode_step_param()`` → ``read_neutronics_parameters()``
     - ``param`` → ``neutronics_parameters``
     - ``read_dep_comp()`` → ``read_depleted_materials()``
+    - ``run_depcode()`` → ``run_depletion_step()``
 
   - ``DepcodeSerpent`` → ``SerpentDepcode``
 
@@ -130,6 +131,7 @@ Python API Changes
     - ``param`` → ``neutronics_parameters``
     - ``read_dep_comp()`` → ``read_depleted_materials()``
     - ``create_nuclide_name_map_zam_to_serpent()`` → ``map_nuclide_code_zam_to_serpent()``
+    - ``run_depcode()`` → ``run_depletion_step()``
 
   - ``OpenMCDepcode`` is a ``Depcode`` subclass that interfaces with ``openmc``. This class implements the following functions 
     - ``run_depcode()``
