--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -120,6 +120,7 @@ Python API Changes
     - ``param`` → ``neutronics_parameters``
     - ``read_dep_comp()`` → ``read_depleted_materials()``
     - ``run_depcode()`` → ``run_depletion_step()``
+    - ``write_mat_file()`` → ``update_depletable_materials()``
 
   - ``DepcodeSerpent`` → ``SerpentDepcode``
 
@@ -132,9 +133,10 @@ Python API Changes
     - ``read_dep_comp()`` → ``read_depleted_materials()``
     - ``create_nuclide_name_map_zam_to_serpent()`` → ``map_nuclide_code_zam_to_serpent()``
     - ``run_depcode()`` → ``run_depletion_step()``
+    - ``write_mat_file()`` → ``update_depletable_materials()``
 
   - ``OpenMCDepcode`` is a ``Depcode`` subclass that interfaces with ``openmc``. This class implements the following functions 
-    - ``run_depcode()``
+    - ``run_depletion_step()``
     - ``switch_to_next_geometry()``
     - ``write_depcode_input()``
     - ``write_depletion_settings()``
