--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -134,6 +134,8 @@ Python API Changes
     - ``create_nuclide_name_map_zam_to_serpent()`` → ``map_nuclide_code_zam_to_serpent()``
     - ``run_depcode()`` → ``run_depletion_step()``
     - ``write_mat_file()`` → ``update_depletable_materials()``
+    - ``get_nuc_name()`` →  ``convert_nuclide_code_to_name()``
+    - ``convert_nuclide_name_serpent_to_zam()`` → ``convert_nuclide_code_to_zam()`` 
 
   - ``OpenMCDepcode`` is a ``Depcode`` subclass that interfaces with ``openmc``. This class implements the following functions 
     - ``run_depletion_step()``
