--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -136,6 +136,8 @@ Python API Changes
     - ``write_mat_file()`` → ``update_depletable_materials()``
     - ``get_nuc_name()`` →  ``convert_nuclide_code_to_name()``
     - ``convert_nuclide_name_serpent_to_zam()`` → ``convert_nuclide_code_to_zam()`` 
+    - ``change_sim_par()`` →  ``apply_neutron_settings()``
+    - ``create_iter_matfile()`` → ``create_runtime_matfile()``
 
   - ``OpenMCDepcode`` is a ``Depcode`` subclass that interfaces with ``openmc``. This class implements the following functions 
     - ``run_depletion_step()``
