--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -138,6 +138,7 @@ Python API Changes
     - ``convert_nuclide_name_serpent_to_zam()`` → ``convert_nuclide_code_to_zam()`` 
     - ``change_sim_par()`` →  ``apply_neutron_settings()``
     - ``create_iter_matfile()`` → ``create_runtime_matfile()``
+    - ``replace_burnup_parameters()`` → ``set_power_load()``
 
   - ``OpenMCDepcode`` is a ``Depcode`` subclass that interfaces with ``openmc``. This class implements the following functions 
     - ``run_depletion_step()``
