--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -121,6 +121,7 @@ Python API Changes
     - ``read_dep_comp()`` → ``read_depleted_materials()``
     - ``run_depcode()`` → ``run_depletion_step()``
     - ``write_mat_file()`` → ``update_depletable_materials()``
+    - ``write_depcode_input()`` →  ``write_depletion_step_input()``
 
   - ``DepcodeSerpent`` → ``SerpentDepcode``
 
@@ -139,6 +140,7 @@ Python API Changes
     - ``change_sim_par()`` →  ``apply_neutron_settings()``
     - ``create_iter_matfile()`` → ``create_runtime_matfile()``
     - ``replace_burnup_parameters()`` → ``set_power_load()``
+    - ``write_depcode_input()`` →  ``write_depletion_step_input()``
 
   - ``OpenMCDepcode`` is a ``Depcode`` subclass that interfaces with ``openmc``. This class implements the following functions 
     - ``run_depletion_step()``
@@ -146,6 +148,7 @@ Python API Changes
     - ``write_depcode_input()``
     - ``write_depletion_settings()``
     - ``write_saltproc_openmc_tallies()``
+    - ``write_depcode_input()`` →  ``write_depletion_step_input()``
 
   - ``app.py``
 
