--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -122,6 +122,8 @@ Python API Changes
     - ``run_depcode()`` → ``run_depletion_step()``
     - ``write_mat_file()`` → ``update_depletable_materials()``
     - ``write_depcode_input()`` →  ``write_depletion_step_input()``
+    - ``iter_inputfile``  →  ``runtime_inputfile``
+    - ``iter_matfile``  →  ``runtime_matfile``
 
   - ``DepcodeSerpent`` → ``SerpentDepcode``
 
@@ -141,6 +143,9 @@ Python API Changes
     - ``create_iter_matfile()`` → ``create_runtime_matfile()``
     - ``replace_burnup_parameters()`` → ``set_power_load()``
     - ``write_depcode_input()`` →  ``write_depletion_step_input()``
+    - ``iter_inputfile``  →  ``runtime_inputfile``
+    - ``iter_matfile``  →  ``runtime_matfile``
+
 
   - ``OpenMCDepcode`` is a ``Depcode`` subclass that interfaces with ``openmc``. This class implements the following functions 
     - ``run_depletion_step()``
@@ -149,6 +154,9 @@ Python API Changes
     - ``write_depletion_settings()``
     - ``write_saltproc_openmc_tallies()``
     - ``write_depcode_input()`` →  ``write_depletion_step_input()``
+    - ``iter_inputfile``  →  ``runtime_inputfile``
+    - ``iter_matfile``  →  ``runtime_matfile``
+
 
   - ``app.py``
 
